Closed
Bug 242123
Opened 22 years ago
Closed 22 years ago
remote option parsing broken
Categories
(Core Graveyard :: X-remote, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: guenther, Assigned: blizzard)
References
Details
(Keywords: fixed-aviary1.0)
Attachments
(1 file)
|
861 bytes,
patch
|
darin.moz
:
review+
bryner
:
superreview+
mkaply
:
approval1.7.5+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7b) Gecko/20040421
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7b) Gecko/20040421
The remote option as described in http://www.mozilla.org/unix/remote.html is
broken in 1.7rc1. As the document mentions, a space after the "," should work --
and actually it did at least until 1.6.
Reproducible: Always
Steps to Reproduce:
This one fails:
$ mozilla -remote 'openURL('http://mozilla.org', new-tab)'
Error: Failed to send command: 509 internal error
This works:
$ mozilla -remote 'openURL('http://mozilla.org',new-tab)'
Setting the Severity to 'major', as this will break a lot of scripts out there.
This definitely should be resolved before 1.7 gets released.
Comment 1•22 years ago
|
||
The fact that you are using doubly nested single quotations is probably a bad
idea. That is most certainly NOT the documented behavior (there are no
quotation marks surrounding the URI string).
Whiteboard: INVALID?
| Reporter | ||
Comment 2•22 years ago
|
||
Actually, this does not matter and is not the issue.
This one fails:
$ mozilla -remote 'openURL(http://mozilla.org, new-tab)'
Error: Failed to send command: 509 internal error
This works:
$ mozilla -remote 'openURL(http://mozilla.org,new-tab)'
| Assignee | ||
Updated•22 years ago
|
Whiteboard: INVALID?
| Assignee | ||
Comment 3•22 years ago
|
||
This moves the url check until after optional arguments are stripped. (It's
barfing on a space in the middle of a url.)
| Assignee | ||
Updated•22 years ago
|
Attachment #147694 -
Flags: superreview?(bryner)
Attachment #147694 -
Flags: review?(darin)
Comment 4•22 years ago
|
||
Comment on attachment 147694 [details] [diff] [review]
patch
r=darin
Attachment #147694 -
Flags: review?(darin) → review+
Updated•22 years ago
|
Attachment #147694 -
Flags: superreview?(bryner) → superreview+
| Assignee | ||
Comment 5•22 years ago
|
||
Checked in. Thanks!
Status: UNCONFIRMED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 6•22 years ago
|
||
Just installed Mozilla 1.7rc2 and tested this issue. Unfortunately this bug
still is valid in the 2004-05-14 build.
Didn't the patch made it into the rc2 release or should I reopen the bug?
Updated•22 years ago
|
Whiteboard: needed-aviary1.,0 → needed-aviary1.0
| Reporter | ||
Comment 8•22 years ago
|
||
Reopening.
As I mentioned before, RC2 still had this bug, as does official 1.7 release.
Comment #2 still applies with the very same error.
Status: RESOLVED → UNCONFIRMED
Resolution: FIXED → ---
Comment 9•22 years ago
|
||
Comment on attachment 147694 [details] [diff] [review]
patch
This got checked in to trunk only, not to the branch. It would probably be
nice to push on the branch though.
Attachment #147694 -
Flags: approval1.7.1?
Comment 10•22 years ago
|
||
Comment on attachment 147694 [details] [diff] [review]
patch
a=mkaply for 1.7.1
Attachment #147694 -
Flags: approval1.7.1? → approval1.7.1+
Comment 11•22 years ago
|
||
I checked this in on the Aviary branch. leaving the bug open in case you wanted
it that way for checking into the 1.7 branch.
Updated•22 years ago
|
Keywords: fixed-aviary1.0
Whiteboard: needed-aviary1.0
| Assignee | ||
Comment 12•22 years ago
|
||
Checked in on the 1.7 branch. Marking fixed.
Status: UNCONFIRMED → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 13•22 years ago
|
||
*** Bug 252024 has been marked as a duplicate of this bug. ***
Comment 14•21 years ago
|
||
*** Bug 229681 has been marked as a duplicate of this bug. ***
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•