Bug #242123.  Spaces in between the comma and a new-X arguement would not load.  Need to verify the URL after arguments have been stripped.  r=darin,sr=bryner